export interface Team {
  readonly teamId: number;
  readonly name: String;
}
