export interface Player {
    readonly playerId: number;
    readonly name: String;
}