@startuml
    title Eispunkt Datenmodell

    entity Game{
        <<PK>> gameId [NUMBER]
        --
        date [DATE]
    }

    entity Game_Team{
        <<FK>> gameId[NUMBER]
        <<FK>> teamId[NUMBER]
    }

    entity Team{
        <<PK>> teamId [NUMBER]
        --
        name [VARCHAR]
    }

    entity Player{
        <<PK>> playerId [NUMBER]
        <<FK>> teamId [NUMBER]
        --
        name [VARCHAR]
    }

    entity Stage{
        <<PK>> stageId[NUMBER]
        <<FK>> gameId[NUMBER]
        --
        stagenumber[NUMBER]
    }

    entity Turn {
        <<PK>> turnId[NUMBER]
        <<FK>> stageId[NUMBER]]
    }

    entity Score{
        <<PK>> scoreId[NUMBER]
        <<FK>> teamId[NUMBER]
        <<FK>> turnId[NUMBER]
        --
        score[NUMBER]
    }

    entity Tournament {
        <<PK>> tournamentId[NUMBER]
        --
        name[VARCHAR]
        location[VARCHAR]
    }

    entity Tournament_Game {
        <<FK>> tournamentId
        <<FK>> gameId
    }

    entity Tournament_Team {
        <<FK>> tournamentId
        <<FK>> teamId
    }

    Team||--o{Game_Team
    Game||--o{Game_Team
    Stage}|-||Game
    Team||-|{Player
    Score}|--||Team
    Score}|--||Turn
    Stage}|--||Turn
    Tournament}--||Tournament_Team
    Tournament}--||Tournament_Game
    Tournament_Team}--||Team
    Tournament_Game}--||Game

    right footer Florian Hayer 06.10.25 
@enduml